repos/makepy/contents/test/fail/Interpolate.rules
x = 1 2 3
y = $x.gif

all:
